# GameNetworking

./: CMakeLists.txt  README.md
networking/client/: CMakeLists.txt
networking/client/include/client/: Enemy.h  Game.h  Network.h  Player.h
networking/client/src/: Enemy.cpp  Game.cpp  Network.cpp  Player.cpp  main.cpp
networking/server/: CMakeLists.txt
networking/server/include/server/: Player.h  Server.h
networking/server/src/: Player.cpp  Server.cpp  main.cpp
